--- a/src/components/Gallery/Thumbnail/Thumbnail.scss
+++ b/src/components/Gallery/Thumbnail/Thumbnail.scss
@@ -9,17 +9,29 @@
 
   padding: 2px;
 
-  .thumbnail-image {
+  button.thumbnail-image {
     height: 100%;
+    width: 100%;
     cursor: pointer;
-    // border: 4px solid $black;
     transition: 0.15s ease-out;
-    background: url(https://thumbor.forbes.com/thumbor/960x0/https%3A%2F%2Fspecials-images.forbesimg.com%2Fimageserve%2F5d35eacaf1176b0008974b54%2F2020-Chevrolet-Corvette-Stingray%2F960x0.jpg%3FcropX1%3D790%26cropX2%3D5350%26cropY1%3D784%26cropY2%3D3349);
-    background-size: cover;
+    background-color: #000;
 
-    &:hover {
-      transform: scale(1.3);
-      transition: 0.3s ease-in-out;
+    .overlay {
+      height: 100%;
+      width: 100%;
+    }
+
+    &:focus {
+      .overlay {
+        background-color: rgba(255, 255, 255, 0.4);
+      }
+    }
+
+    @media screen and (min-width: 800px) {
+      &:hover {
+        transform: scale(1.3);
+        transition: 0.3s ease-in-out;
+      }
     }
   }
 }
