--- a/src/styling/reset.scss
+++ b/src/styling/reset.scss
@@ -135,3 +135,10 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+button {
+  outline: none;
+  border: none;
+  border-radius: 0;
+  padding: 0;
+}
