--- a/src/components/Gallery/Thumbnail/Thumbnail.scss
+++ b/src/components/Gallery/Thumbnail/Thumbnail.scss
@@ -9,8 +9,13 @@
 
   padding: 2px;
 
+  .info {
+    visibility: hidden;
+  }
+
   .thumbnail-image {
     display: inline-block;
+    position: relative;
     height: 100%;
     width: 100%;
     cursor: pointer;
@@ -25,16 +30,42 @@
     }
 
     &:focus {
+      z-index: 100;
       .overlay {
         transition: 0.3s;
         background-color: rgba(255, 255, 255, 0.4);
       }
+      .info {
+        visibility: visible;
+      }
     }
 
     @media screen and (min-width: 800px) {
-      &:hover {
-        transform: scale(1.3);
-        transition: 0.3s ease-in-out;
+      &:not(.open) {
+        &:hover {
+          transform: scale(1.3);
+          transition: 0.3s ease-in-out;
+          z-index: 500;
+          .info {
+            visibility: visible;
+          }
+        }
+      }
+    }
+
+    /** When the thumbnail is expanded **/
+    &.open {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      transition: 0.3s;
+      z-index: 300;
+
+      /** Hide focus overlay **/
+      .overlay {
+        display: none;
       }
     }
   }
