--- a/src/styling/index.scss
+++ b/src/styling/index.scss
@@ -1,6 +1,10 @@
 @import './reset.scss';
 @import './tokens.scss';
 
+html {
+  font-size: 16px;
+}
+
 body {
   background: rgba($brand-primary, 0.3);
 }
