--- a/src/styling/index.scss
+++ b/src/styling/index.scss
@@ -3,8 +3,9 @@
 
 html {
   font-size: 16px;
+  color: $black;
 }
 
 body {
-  background: rgba($brand-primary, 0.3);
+  background: $brand-primary;
 }
