--- a/src/components/Gallery/Thumbnail/Thumbnail.scss
+++ b/src/components/Gallery/Thumbnail/Thumbnail.scss
@@ -1,6 +1,8 @@
 @import '../../../styling/tokens.scss';
 
 .thumbnail-container {
+  height: 100%;
+
   &::before {
     content: '';
     float: left;
