--- a/src/components/Gallery/Thumbnail/VehicleInfo/VehicleInfo.scss
+++ b/src/components/Gallery/Thumbnail/VehicleInfo/VehicleInfo.scss
@@ -15,9 +15,14 @@
 
     .profile-picture {
       display: inline-block;
-      width: 60px;
-      height: 60px;
+      width: 40%;
+      max-width: 60px;
       border-radius: 60px;
+      &::before {
+        content: '';
+        float: left;
+        padding-top: 100%;
+      }
     }
 
     .user-section {
@@ -26,7 +31,7 @@
       flex: 1;
 
       p.name {
-        font-size: 1rem;
+        font-size: 0.9rem;
         font-weight: bold;
         margin-bottom: 5px;
       }
