--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,35 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap');
+@import './styling/tokens.scss';
 
 .app-container {
   font-family: 'Open Sans', sans-serif;
-  max-width: 1100px;
-  margin: 30px auto;
-  padding: 5px;
+
+  .main-container {
+    max-width: 1100px;
+    padding: 5px;
+    margin: 30px auto;
+  }
+
+  footer {
+    background: $black;
+    padding: 20px;
+    text-align: center;
+
+    button.contact-us-btn {
+      background: transparent;
+      padding: 20px;
+      cursor: pointer;
+      color: $white;
+      font-size: 1.1rem;
+      border: 1px dotted $brand-primary;
+      transition: 0.3s;
+
+      &:hover,
+      &:focus {
+        background: rgba($brand-primary, 0.8);
+        color: $black;
+        transition: 0.3s;
+      }
+    }
+  }
 }
