--- a/src/components/ContactForm/ContactForm.scss
+++ b/src/components/ContactForm/ContactForm.scss
@@ -38,5 +38,12 @@
         margin-left: 10px;
       }
     }
+
+    .success-message {
+      font-size: 0.85rem;
+      background: rgba($brand-primary, 0.56);
+      padding: 15px;
+      margin: 20px 0px;
+    }
   }
 }
